# spde-server

./: CMakeLists.txt  Dockerfile  main.cpp  main_client.cpp
cmake/: FindGRPC.cmake
include/: spde_client.hpp  spde_server.hpp  sweep.hpp
proto/: spde.proto
src/: spde_client.cpp  spde_server.cpp  sweep.cpp
